--- a/src/features/home/shopping-item-form.module.css
+++ b/src/features/home/shopping-item-form.module.css
@@ -25,6 +25,4 @@
 
 .actionButton {
   flex: 0 0 auto;
-  margin-right: 0.25rem;
-  margin-left: 1.25rem;
 }
